--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,16 +3,23 @@
         <div class="navBarContainer__logoContainer--logo"></div>
     </div>
     <div class="navBarContainer__buttonMenuContainer">
-        <div class="navBarContainer__buttonMenuContainer--button" *ngFor="let button of currentNames">{{button}}</div>
+        <div class="navBarContainer__buttonMenuContainer__topButton">
+            <div class="navBarContainer__buttonMenuContainer__topButton--button"
+                *ngFor="let button of currentNames; index as i"
+                (click)="activeMe(i)"
+                [ngClass]="{'button_pressed': buttonActivated[i], 'button_unpressed': !buttonActivated[i]}"
+            >{{button}}</div>
+        </div>
+        <div class="navBarContainer__buttonMenuContainer__bottomButton"></div>
     </div>
-    <div class="navBarContainer__footerContainer">
+    <!-- <div class="navBarContainer__footerContainer">
         <div class="navBarContainer__footerContainer__settingButton">Setting</div>
         <div class="navBarContainer__footerContainer__infoButton">Info</div>
-    </div>
+    </div> -->
 </div>
 <div class="menuPageContainer" [ngSwitch]="menuSwitcher">
-    <app-landend-menu *ngSwitchCase='"landed"'></app-landend-menu>
-    <app-pdf-to-images-menu *ngSwitchCase='"p2i"'></app-pdf-to-images-menu>
-    <app-images-to-pdf-menu *ngSwitchCase='"i2p"'></app-images-to-pdf-menu>
-    <app-manage-pdf-menu *ngSwitchCase='"mp"'></app-manage-pdf-menu>
+    <app-landend-menu *ngSwitchCase='0'></app-landend-menu>
+    <app-pdf-to-images-menu *ngSwitchCase='1'></app-pdf-to-images-menu>
+    <app-images-to-pdf-menu *ngSwitchCase='2'></app-images-to-pdf-menu>
+    <app-manage-pdf-menu *ngSwitchCase='3'></app-manage-pdf-menu>
 </div>
