--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/style/style.const.scss';
+
 :host {
     width: 100%;
     height: 100%;
@@ -35,43 +37,42 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 10px;
-       
-        &--button {
-            width: 80%;
-            height: 30px;
+
+        &__topButton {
+            width: 100%;
+            height: 75%;
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: center;
-            position: relative;
-            cursor: pointer;
+            gap: 10px;
 
-            &::after {
-                content: '';
-                position: absolute;
-                width: 100%;
-                height: 0.1rem;
-                background-color: black;
-                left: 0;
-                bottom: 0;
-                transform: scale(0, 1);
-                transform-origin: 0% 100%;
-                transition: transform 0.3s ease;
+            &--button {
+                width: 80%;
+                height: 30px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                border-radius: 10px;
             }
+        }
 
-            &:hover::after {
-                transform: scale(1,1);
-            }
+        &__bottomButton {
+            width: 100%;
+            height: 25%;
+            // background-color: aqua;
         }
     }
 
     &__footerContainer {
         width: 100%;
-        height: 120px;
+        height: 130px;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        gap: 10px;
+        background-color: red;
         
         & > * {
             width: 80%;
@@ -83,28 +84,37 @@
             justify-content: center;
             transition: box-shadow .5s linear;
             border-radius: 10px;
+            box-shadow:  4px 4px 8px #b4b4b4, -4px -4px 8px #f4f4f4, inset 0px 0px 0px #b4b4b4, inset 0px 0px 0px #f4f4f4;
+            transition: box-shadow .1s ease-in-out;
         }
 
-        & > *:hover {
-            box-shadow:
-                -0.1px -0.1px 2.8px rgba(0, 0, 0, 0.04),
-                2px 2.4px 6.1px rgba(0, 0, 0, 0.058),
-                8px 9.3px 10.8px rgba(0, 0, 0, 0.072),
-                21.9px 25.5px 19.8px rgba(0, 0, 0, 0.09),
-                61px 71px 53px rgba(0, 0, 0, 0.13)
-            ;
+        & > *:active {
+            box-shadow:  0px 0px 0px #b4b4b4, -0px 0px 0px #f4f4f4, inset 3px 3px 6px #b4b4b4, inset -3px -3px 6px #f4f4f4;
         }
     }
 }
 
 .menuPageContainer {
     flex: 4;
-    -webkit-box-shadow: inset 13px 11px 15px -4px rgba(0,0,0,0.48); 
-    box-shadow: inset 13px 11px 15px -4px rgba(0,0,0,0.48);
+
+    & > * {
+        width: 100%;
+        height: 100%;
+    }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 810px) {
     .navBarContainer__buttonMenuContainer--button {
         justify-content: center;
     }
+}
+
+.button_unpressed {
+    box-shadow:  4px 4px 8px #b4b4b4, -4px -4px 8px #f4f4f4, inset 0px 0px 0px #b4b4b4, inset 0px 0px 0px #f4f4f4;
+    transition: box-shadow .2s ease-in-out;
+}
+
+.button_pressed {
+    transition: box-shadow .2s ease-in-out;
+    box-shadow:  0px 0px 0px #b4b4b4, -0px 0px 0px #f4f4f4, inset 3px 3px 6px #b4b4b4, inset -3px -3px 6px #f4f4f4;
 }
