--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./assets/style/style.const.scss";
+
 body {
     margin: 0;
     padding: 0;
+    background-color: $main_background-color;
 }
 
 @font-face {
