--- a/src/app/components/sectioneMenu/images-to-pdf-menu/images-to-pdf-menu.component.html
+++ b/src/app/components/sectioneMenu/images-to-pdf-menu/images-to-pdf-menu.component.html
@@ -1,10 +1,7 @@
 <div class="menuContainer">
     <div class="menuContainer__ButtonContainer">
-        <div class="menuContainer__ButtonContainer--button" *ngFor="let iconPath of buttonsIconPath; let i = index">
-            <img class="menuContainer__ButtonContainer__outputPathButton--icon" src="{{iconPath}}" style="object-fit: conver;">
-            <div class="menuContainer__ButtonContainer__outputPathButton--label">{{buttonsLabel[i]}}</div>
+        <div class="menuContainer__ButtonContainer--button" *ngFor="let label of buttonsLabel">
+            <div class="menuContainer__ButtonContainer__outputPathButton--label">{{label}}</div>
         </div>
     </div>
-    <div class="menuContainer__inputVisualizer">show</div>
-    <div class="menuContainer__convertButton">exec</div>
 </div>
